# bt3

./: .dockerignore  .env-sample  .env.example  .gitignore  Dockerfile  README.md  bootstrap.ps1  bootstrap.sh  docker-compose.yml  index.html  keys.sample.py  main.py  pyproject.toml  requirements.txt  routes.txt  sprint2-report.md  stops.txt
.github/workflows/: ci.yml
docs/: architecture.md  feature.md  gui-concept-doc.md  sprint2-report.md  sprint3-report.md  sprint3_design.md
src/: .dockerignore  .gitignore  Dockerfile  app.py  config.py  docker-compose.yml  firebase.py  index.py  models.py
src/blueprints/api/: __init__.py  routes.py
src/blueprints/auth/: __init__.py  routes.py
src/blueprints/dashboard/: __init__.py  routes.py
src/blueprints/data_geojson/: __init__.py  routes.py
src/blueprints/profile/: __init__.py  routes.py
src/decorators/: auth.py
src/templates/: error.html  index.html  layout.html  login.html  profile.html  signup.html
src/tests/: conftest.py  test_api_auth.py  test_api_routes_extra.py  test_api_validation.py  test_auth_routes.py  test_auth_routes_extra.py  test_dashboard_routes.py  test_dashboard_routes_extra.py  test_data_geojson_routes.py  test_profile_routes.py  test_profile_routes_extra.py  test_tools.py  test_utils_data.py  test_validation.py
src/tools/: fetch_gtfs_static.py  fetch_types.py
src/utils/: auth.py  data.py  logging_config.py  profile.py  validation.py
tools/: fetch_gtfs_static.py  hash.py
