[project]
name = "bt3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=5.0.0",
    "bs4>=0.0.2",
    "firestore>=0.0.8",
    "flask>=3.1.2",
    "flask-limiter>=4.1.1",
    "gtfs-realtime-bindings>=2.0.0",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
]
