[project]
name = "bt3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=5.0.0",
    "beautifulsoup4>=4.14.3",
    "bs4>=0.0.2",
    "firebase-admin==6.5.0",
    "firestore>=0.0.8",
    "flask==3.1.2",
    "flask-limiter>=4.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gtfs-realtime-bindings>=2.0.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "python-dotenv==1.0.1",
    "requests==2.32.3",
    "pandas>=3.0.1",
]
